# sports-ai-video-editor

./: .gitattributes  .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  Cargo.toml  eslint.config.js  package.json  pnpm-lock.yaml  prettier.config.js  tsconfig.base.json  vitest.config.ts
.claude/agents/: basketball-ai-agent.md  ceo-orchestrator.md  contracts-persistence-agent.md  dept-head-platform.md  dept-head-product.md  editor-ui-agent.md  native-media-storage-agent.md  product-acceptance-agent.md  reliability-qa-agent.md  timeline-domain-agent.md
apps/desktop/: package.json  tsconfig.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs  storage_commands.rs
apps/editor/: index.html  package.json  vite.config.ts
docs/: 00-project-brief.md  01-product.md  02-phase-roadmap.md  03-sports-workflows.md  04-design-system.md
docs/architecture/: ai-system.md  basketball-domain.md  connector-system.md  media-engine.md  project-format.md  technical-architecture.md  timeline-domain.md
docs/engineering/: agent-organization.md  engineering-standards.md  quality-gates.md  structure.md  testing-strategy.md
docs/memory/: active-state.md  decisions.md  (+2 more)
native/desktop-media/: Cargo.toml
native/desktop-media/src/: encode.rs  error.rs  ffbin.rs  inspect.rs  lib.rs  managed.rs  plan.rs  thumbnail.rs  validate.rs  waveform.rs
native/desktop-media/tests/: benchmark.rs  derivatives.rs  exit_criteria.rs  m4_exit_criteria.rs  managed.rs  pipeline.rs
native/desktop-storage/: Cargo.toml
native/desktop-storage/src/: error.rs  index.rs  lib.rs  media.rs  media_links.rs  project.rs
native/desktop-storage/tests/: exit_criteria.rs  media_ops.rs  project_lifecycle.rs
tests/: package.json  tsconfig.json
(+35 files in other folders)
